After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685235 - Better error reporting for youtube plugin when quvi fails
Better error reporting for youtube plugin when quvi fails
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-01 17:39 UTC by Mohammed Sameer
Modified: 2012-10-02 06:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (995 bytes, patch)
2012-10-01 17:39 UTC, Mohammed Sameer
committed Details | Review

Description Mohammed Sameer 2012-10-01 17:39:13 UTC
Created attachment 225518 [details] [review]
proposed patch

Youtube plugin will simply not set a media URL if libquvi fails to extract the url for any reason.

This patch will emit a Grilo warning instead of silently ignoring the error.
Comment 1 Juan A. Suarez Romero 2012-10-02 06:27:08 UTC
commit df5be4ea0613900531b744035d2d25b0fdeaaae1
Author: Mohammed Hassan <mohammed.hassan@jollamobile.com>
Date:   Mon Oct 1 20:32:45 2012 +0300

    Emit a warning when quvi fails to parse the video URL.
    
    This can help debugging if/when quvi fails to parse. Currently we
    will fail silently which is not that friendly.
    
    This fixes https://bugzilla.gnome.org/show_bug.cgi?id=685235

 src/youtube/grl-youtube.c | 4 ++++
 1 file changed, 4 insertions(+)