Emit a warning when quvi fails to parse the video URL.

This can help debugging if/when quvi fails to parse. Currently we
will fail silently which is not that friendly.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=685235